--- a/medical-records-service/src/main/resources/application.properties
+++ b/medical-records-service/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=medical-records-service
+server.port=4009
+server.shutdown=graceful
+# kubernetes sends a SIGTERM 30s before a SIGKILL when its about to terminate a pod
+spring.lifecycle.timeout-per-shutdown-phase=30s
+
+spring.mongodb.host=192.168.1.6                                                                                                                                                                                                                                                                                      │
+spring.mongodb.port=27017
+spring.mongodb.database=medicalrecordsservice
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:/db/changelog/master.yaml
