--- a/analytics-service/src/main/resources/application.properties
+++ b/analytics-service/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.lifecycle.timeout-per-shutdown-phase=30s
 
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.ByteArrayDeserializer
+spring.kafka.consumer.group-id=analytics-service-group
 
 spring.kafka.bootstrap-servers=localhost:9092
 
@@ -16,5 +17,8 @@ spring.datasource.username=default
 spring.datasource.password=clickhouse
 spring.datasource.driver-class-name=com.clickhouse.jdbc.ClickHouseDriver
 
-spring.liquibase.change-log=classpath:db/changelog/master.xml
-spring.liquibase.enabled=true
+spring.batch.jdbc.initialize-schema=ALWAYS
+spring.batch.datasource.url=jdbc:h2:file:./data/batchdb;DB_CLOSE_ON_EXIT=FALSE
+spring.batch.datasource.username=sa
+spring.batch.datasource.password=
+spring.batch.datasource.driver-class-name=org.h2.Driver
