--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -49,3 +49,11 @@ spring.liquibase.enabled=true
 
 # batch
 spring.batch.jdbc.initialize-schema=ALWAYS
+
+# email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=solonkovalentin@gmail.com
+spring.mail.password=pass
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
