--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.datasource.username=notificationservice
 
 spring.data.jpa.repositories.bootstrap-mode=deferred
 spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
@@ -53,7 +53,7 @@ spring.batch.jdbc.initialize-schema=ALWAYS
 # email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=solonkovalentin@gmail.com
+spring.mail.username=skarandanis@gmail.com
 spring.mail.password=pass
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
