--- a/notification-service/pom.xml
+++ b/notification-service/pom.xml
@@ -104,6 +104,10 @@
             <version>${querydsl.version}</version>
             <classifier>jakarta</classifier>
         </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+        </dependency>
         <!-- QueryDSL Dependencies End-->
     </dependencies>
 
