--- a/frontent/package.json
+++ b/frontent/package.json
@@ -10,36 +10,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.3.14",
-    "@angular/compiler": "^20.3.14",
-    "@angular/core": "^20.3.14",
-    "@angular/forms": "^20.3.14",
-    "@angular/platform-browser": "^20.3.14",
-    "@angular/platform-browser-dynamic": "^20.3.14",
-    "@angular/router": "^20.3.14",
-    "@ngrx/operators": "^20.1.0",
-    "@ngrx/signals": "^20.1.0",
-    "@ngx-translate/core": "^16.0.4",
-    "@ngx-translate/http-loader": "^16.0.1",
-    "@primeng/themes": "^20.3.0",
+    "@angular/animations": "^21.0.6",
+    "@angular/common": "^21.0.6",
+    "@angular/compiler": "^21.0.6",
+    "@angular/core": "^21.0.6",
+    "@angular/forms": "^21.0.6",
+    "@angular/platform-browser": "^21.0.6",
+    "@angular/platform-browser-dynamic": "^21.0.6",
+    "@angular/router": "^21.0.6",
+    "@ngrx/operators": "^21.0.1",
+    "@ngrx/signals": "^21.0.1",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^17.0.0",
+    "@primeng/themes": "^21.0.2",
+    "@stomp/stompjs": "^7.2.1",
     "@tailwindcss/postcss": "^4.1.2",
+    "@types/sockjs-client": "^1.5.4",
     "jsonwebtoken": "^9.0.2",
     "ngx-permissions": "^19.0.0",
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
-    "primeng": "^20.3.0",
+    "primeng": "^21.0.2",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
-    "@stomp/stompjs": "^7.2.1",
-    "@types/sockjs-client": "^1.5.4",
     "tailwindcss": "^4.1.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.3.12",
-    "@angular/cli": "^20.3.12",
-    "@angular/compiler-cli": "^20.3.14",
+    "@angular/build": "^21.0.4",
+    "@angular/cli": "^21.0.4",
+    "@angular/compiler-cli": "^21.0.6",
     "@types/jasmine": "~5.1.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/sockjs-client": "^1.5.4",
