Added quartz in payment-service

--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -44,3 +44,8 @@ payment.processing.topic-name=payment-events
 
 # batch
 spring.batch.jdbc.initialize-schema=ALWAYS
+
+# quartz
+spring.quartz.job-store-type=jdbc
+spring.quartz.jdbc.initialize-schema=always
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
