Added geolocation in medical records service

--- a/medical-records-service/src/main/resources/application.properties
+++ b/medical-records-service/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.lifecycle.timeout-per-shutdown-phase=30s
 spring.mongodb.host=192.168.1.6
 spring.mongodb.port=27017
 spring.mongodb.database=medicalrecordsservice
+
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+logging.level.org.springframework.data.mongodb.core.query=DEBUG
