--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.shutdown=graceful
 server.port=4005
 spring.messages.encoding=UTF-8
 #spring.main.allow-circular-references=true
+server.servlet.context-path=/auth-service
 
 server.compression.enabled=true
 server.compression.mime-type=text/html,text/xml,text/plain,application/json,application/xml,text/css,text/javascript,application/javascript
@@ -69,3 +70,5 @@ hazelcast.instance.name=dev
 hazelcast.instance.port=5701
 
 i18n.resources.DB.enabled=true
+
+cors.enabled=false
