--- a/analytics-service/src/main/resources/application.properties
+++ b/analytics-service/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=4002
 server.shutdown=graceful
 # kubernetes sends a SIGTERM 30s before a SIGKILL when its about to terminate a pod
 spring.lifecycle.timeout-per-shutdown-phase=30s
+server.servlet.context-path=/analytics-service
 
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.ByteArrayDeserializer
