--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.shutdown=graceful
 #server.servlet.context-path= /patient-service/v1
 # kubernetes sends a SIGTERM 30s before a SIGKILL when its about to terminate a pod
 spring.lifecycle.timeout-per-shutdown-phase=30s
+server.servlet.context-path=/notification-service
 
 notification.topic-name=notification-events
 
