--- a/frontent/package.json
+++ b/frontent/package.json
@@ -26,6 +26,7 @@
     "@stomp/stompjs": "^7.2.1",
     "@tailwindcss/postcss": "^4.1.2",
     "@types/sockjs-client": "^1.5.4",
+    "d3": "^7.9.0",
     "jsonwebtoken": "^9.0.2",
     "ngx-permissions": "^19.0.0",
     "postcss": "^8.5.3",
@@ -41,6 +42,7 @@
     "@angular/build": "^21.0.4",
     "@angular/cli": "^21.0.4",
     "@angular/compiler-cli": "^21.0.6",
+    "@types/d3": "^7.4.3",
     "@types/jasmine": "~5.1.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/sockjs-client": "^1.5.4",
