Fixed Notification service kafka connection issues

--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=notification-service
+
 # application
 server.port=4010
 server.shutdown=graceful
@@ -7,10 +8,13 @@ server.shutdown=graceful
 spring.lifecycle.timeout-per-shutdown-phase=30s
 server.servlet.context-path=/notification-service
 
+spring.kafka.bootstrap-servers=localhost:9092
 notification.topic-name=notification-events
 
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.ByteArrayDeserializer
+spring.kafka.consumer.group-id=notifications-service
+spring.kafka.consumer.auto-offset-reset=earliest
 
 # Artemis connection details (for the core protocol)
 spring.artemis.broker-url=tcp://127.0.0.1:61616
