--- a/analytics-service/src/main/resources/application.properties
+++ b/analytics-service/src/main/resources/application.properties
@@ -8,6 +8,7 @@ server.servlet.context-path=/analytics-service
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.ByteArrayDeserializer
 spring.kafka.consumer.group-id=analytics-service-group
+spring.kafka.consumer.auto-offset-reset=earliest
 
 spring.kafka.bootstrap-servers=localhost:9092
 
